# Hathor

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml  sql.yml
crates/hathor/: Cargo.toml  index.html  styles.css
crates/hathor-audios/: Cargo.toml
crates/hathor-audios/src/: audio.rs  database.rs  file_management.rs  fixtures.rs  lib.rs
crates/hathor-audios/src/audio/: from_file.rs  playback.rs
crates/hathor-audios/src/database/: audio_files.rs  initialise_db.rs  playlists.rs  user_media_folders.rs
crates/hathor-audios/src/database/audio_files/: .sqlfluff  get_audio_by_hash.sql  get_audios_by_album_name.sql  get_audios_by_artist_name.sql  get_audios_by_title.sql  initialise_audio_files_table.sql  initialise_audios_table.sql  insert_audio.sql  insert_audio_file.sql
crates/hathor-audios/src/database/playlists/: add_audio_to_playlist.sql  get_audios_from_playlist.sql  initialise_playlists_table.sql
crates/hathor-audios/src/database/user_media_folders/: initialise_user_media_folders_table.sql  insert_user_media_folder.sql
crates/hathor-songs/: Cargo.toml
crates/hathor-songs/src/: audio.rs  database.rs  file_management.rs  lib.rs
crates/hathor-songs/src/audio/: from_file.rs  output.rs  playback.rs  playback_manager.rs  resampler.rs
crates/hathor-songs/src/database/: insert_song.sql  (+6 more)
crates/hathor/src/: main.rs
crates/hathor/src-tauri/: Cargo.toml  tauri.conf.json
test_media_files/hashing/: hashing_test_copy.txt  hashing_test_first_char_changed.txt  hashing_test_last_char_changed.txt
(+12 files in other folders)
