[package]
name = "hathor-audios"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5.0"
eyre = "0.6.11"
lazy_static = "1.4.0"
log = "0.4.20"
rusqlite = { version = "0.30.0", features = ["bundled"] }
symphonia = { version = "0.5.3", features = ["all"] }
time = "0.3.30"
walkdir = "2.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.1"
cpal = "0.15.2"
rb = "0.3.2"
rubato = "0.14.1"

[dev-dependencies]
rstest = "0.18.2"
